examples/type_system/failing/144_guarded_wildcard_only_non_exhaustive_targeted.flx
// E015: guarded wildcard does not guarantee exhaustiveness.
fn main() -> Unit {
    let x = 2
    let _y = match x {
        _ if x > 0 -> 1
    }
}
